@@ -13,7 +13,12 @@
     <dependency>
       <groupId>org.graalvm.js</groupId>
       <artifactId>js</artifactId>
-      <version>19.0.0</version>
+      <version>21.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.sdk</groupId>
+      <artifactId>graal-sdk</artifactId>
+      <version>21.3.0</version>
     </dependency>
   </dependencies>
   <properties>
@@ -27,8 +32,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>12</release>
-          <compilerArgs>--enable-preview</compilerArgs>
+          <release>17</release>
         </configuration>
       </plugin>
     </plugins>
